# sqlite-notes

./: README.md  book.toml
src/: SUMMARY.md  array.md  callbacks.md  checks.md  cli.md  columns.md  delete.md  design.md  drivers.md  extensions.md  fts.md  indexes.md  introspection.md  parser.md  patterns.md  pragma.md  profiling.md  query_plan.md  recover.md  recursive.md  schema.md  server.md  sql.md  sqlite3_ext.md  sync.md  thread_safe.md  timestamp.md  tools.md  trigger.md  typing.md
src/C/: alter_table.c  blob.c  busy.c  column_count.c  compile.sh  db_filename.c  json.c  readonly.c  select_no_table.c
src/C/autoext/: CMakeLists.txt  main.c
src/C/auxdata/: Makefile  auxdata.c
src/C/sqlite-fts-test/: CMakeLists.txt  main.c
